--- a/Optimised/Properties/Resources.resx
+++ b/Optimised/Properties/Resources.resx
@@ -118,11 +118,17 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="home_icon_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\home_icon&amp;32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="key_icon_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\key_icon&amp;32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="mail_icon_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\mail_icon&amp;32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="on_off_icon_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\on-off_icon&amp;32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="user_icon_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\user_icon&amp;32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
