--- a/Optimised/Properties/Resources.resx
+++ b/Optimised/Properties/Resources.resx
@@ -130,7 +130,13 @@
   <data name="on_off_icon_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\on-off_icon&amp;32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="undo_icon_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\undo_icon&amp;32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="user_icon_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\user_icon&amp;32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="wrench_plus_icon_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\wrench_plus_icon&amp;32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
