--- a/Optimised/Optimised.resx
+++ b/Optimised/Optimised.resx
@@ -6311,6 +6311,9 @@
         AADwHwAA4A8AAOAPAADgDwAA4A8AAPAfAADwHwAA/H8AAP//AAD//wAA//8AAP//AAA=
 </value>
   </data>
+  <metadata name="opensite.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>964, 17</value>
+  </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAYAAAAAAAEAIAAoIAQAZgAAAICAAAABACAAKAgBAI4gBABAQAAAAQAgAChCAAC2KAUAMDAAAAEA
